--- a/hrt-narrative.Rmd
+++ b/hrt-narrative.Rmd
@@ -972,11 +972,9 @@ Gina 10 microgram vaginal tablets are a proprietary equivalent of Estradiol 10 m
 
 ### 3.4. Shortages {.toc-ignore}
 
-There have been concerns that some women across the UK were unable to obtain their prescriptions due to shortages of HRT products. This coupled with the impact of COVID-related global supply problems means that many women are extremely concerned about not being able to get access to this vital medication. Action has been taken and has been successful, albeit not immediate, in addressing these shortages.
+There have been concerns that some women across the UK were unable to obtain their prescriptions due to shortages of HRT products. This coupled with the impact of COVID-related global supply problems means that many women are extremely concerned about not being able to get access to this vital medication.
 
-The Department of Health and Social Care (DHSC) has worked closely with suppliers and other stakeholders, to maintain overall HRT supply to patients across the UK. This has included holding roundtables with suppliers, wholesalers, and community pharmacists to discuss the challenges they are facing and what needs to be done to address them in the short- and longer-term; working with suppliers to expedite resupply dates of the disrupted HRT products to resolve issues as soon as possible and to help fill supply gaps and prevent future shortages; and working closely with the NHS Business Service Authority to secure access to HRT dispensing data in order to improve understanding of supply, demand and what is driving shortages and Serious Shortage Protocols (SSPs) have been issued for some HRT medicines.
-
-While the supply of HRT is improving, there is still some way to go. The Government will continue to build on the improvements in the HRT supply position tenure, including through taking forward the HRT Supply Taskforce recommendations, which the Department will ensure are implemented in full.  
+There are over 70 HRT products available in the UK and while most remain in good supply, a range of factors including an increase in demand has led to supply issues with a limited number of products. The Department of Health and Social Care (DHSC) continues to work closely with suppliers and other stakeholders to maintain overall HRT supply to patients across the UK. This includes working to expedite resupply dates of the disrupted HRT products to resolve issues as soon as possible and to help fill supply gaps and prevent future shortages. Access to in-demand products has improved since Serious Shortage Protocols (SSPs) were issued to limit dispensing to three months’ supply to even out distribution and allow alternative products to be dispensed, as necessary. Suppliers have taken swift action to secure additional stock of HRT products which are experiencing shortages and deliveries of further stock have been expedited. These actions have increased near-term supply and the supply position has improved. To support continued growth in the longer term, suppliers are taking steps to further build capacity and increase production. 
 
 ## 4. About these statistics
 
